# yaat

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  Directory.Build.props  GETTING_STARTED.md  GOVERNANCE.md  INSTALL.md  LICENSE  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  SOLO_TRAINING.md  Setup-CrcEnvironment.ps1  USER_GUIDE.md  deploy-to-droplet.ps1  prek.toml  qodana.yaml  start.ps1  start.sh  todo.txt  vs-chromium-project.txt  watch-server-logs.ps1  y.ps1  yaat.code-workspace  yaat.slnx
.github/: PULL_REQUEST_TEMPLATE.md
.rustling-tulip/: presets.json
docs/: README.md  aircraft-data-model.md  aircraft-performance.md  airline-fleets.md  airport-airlines.md  airspace-database.md  approach-and-pattern-geometry.md  architecture.md  client-mainviewmodel.md  command-aliases-reference.md  command-cheatsheet.html  command-cheatsheet.json  command-handlers.md  command-input-ux.md  command-pipeline.md  conflict-and-visual-detection.md  crc-display-state.md  crc-environments.json  discord-integration.md  e2e-tdd-issue-debugging.md  e2e-testing.md  flight-physics.md  flight-strips.md  ground-layout-generation.md  ground-rendering.md  hold-for-release.md  installation-guide.md  installer-release.md  landing-and-runway-exit.md  logging.md  macos-code-signing.md  minimum-vectoring-altitude.md  navigation-database.md  phases.md  pilot-phraseology-examples.md  (+21 more)
tools/yaat-crc-config/: Cargo.toml  README.md  build.rs
tools/yaat-crc-config/src/: config.rs  dialog.rs  main.rs
(+2484 files in other folders)
