[package]
name = "yaat-crc-config"
version = "0.1.1"
edition = "2021"
description = "Standalone tool that adds YAAT server entries to CRC's DevEnvironments.json"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[build-dependencies]
serde_json = "1"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
